--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,10 @@
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "express-session": "^1.17.1",
+    "got": "^11.8.1",
+    "path": "^0.12.7"
   }
 }
